@@ -18,6 +18,9 @@ Changes since 4.1
 6/27/13
     - Added support for LP solver GLPK which is built-in to
       Octave. Use 'opf.dc.solver' option 'GLPK'.
+    - INCOMPATIBLE CHANGE: Removed optional 'max_it' field from
+      opt argument to qps_matpower() and qps_*() family of
+      functions (except qps_mips()).
 
 6/13/13
     - Added ability for loadcase() to load MATPOWER case M-files
